# alirsdb

./: Cargo.toml  build.rs
protos/: alirs.proto  types.proto
src/: main.rs
src/grpc/: mod.rs
src/grpc/internal/: server.rs
