[package]
name = "alirsdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
prost = "0.11.8"
tokio = {version = "1.19.2", features = ["macros","rt-multi-thread"] }
tonic = "0.9.1"
serde = "1"
prost-types = "0.11.1"

[build-dependencies]
tonic-build = "0.9.1"
